--- a/ProcMaster/src/App.css
+++ b/ProcMaster/src/App.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  padding: 10px;
 }
 
 .row {
@@ -82,5 +83,11 @@ button:active {
 
   button:active {
     background-color: #0f0f0f69;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0;
   }
 }
