--- a/ProcMaster/src/App.css
+++ b/ProcMaster/src/App.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  color: #0f0f0f;
+  color: #ffffff;
   background-color: #f6f6f6;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -45,7 +45,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  color: #0f0f0f;
+  color: #ffffff;
   background-color: #ffffff;
   transition: border-color 0.25s, background-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
