--- a/ProcMaster/src/App.css
+++ b/ProcMaster/src/App.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  color: #ffffff;
+  color: #0f0f0f;
   background-color: #f6f6f6;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
